# FantasyJump

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/: texture.atlas
assets/sprites/: texture.atlas
src/: app.cpp  app.h  app_listener.h  main.cpp  packer_main.cpp
src/assets/: tex_loader.cpp  tex_loader.h
src/core/: assets.cpp  assets.h  content.cpp  content.h  entity.cpp  entity.h  events.cpp  events.h  game_controller.cpp  game_controller.h  input.cpp  input.h  renderer.cpp  renderer.h  team.cpp  team.h  time.cpp  time.h
src/graphics/: camera.cpp  camera.h  color.cpp  color.h  frame_buffer.cpp  frame_buffer.h  mesh.cpp  mesh.h  shader.cpp  shader.h  sprite_batch.cpp  sprite_batch.h  tex.cpp  tex.h  tex_atlas.cpp  tex_atlas.h
src/util/: mathf.cpp  mathf.h  pngio.cpp  pngio.h
